--- a/README.ME
+++ b/README.ME
@@ -1,2 +1,4 @@
 # droneShield
 ![drone-long](https://user-images.githubusercontent.com/72104254/168977221-30a76f20-07a7-4592-b570-a3f25484d138.gif)
+
+<img src="https://user-images.githubusercontent.com/72104254/168977221-30a76f20-07a7-4592-b570-a3f25484d138.gif" width="400" height="400" />
